Update zsh/tmux env to fix window name

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 # make tmux display things in 256 colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 # for putty
 set -g terminal-overrides "xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
@@ -28,6 +28,7 @@ set -g mode-keys vi
 set -g status-keys vi
 
 # window operations
+setw -g xterm-keys on
 bind -n C-left previous-window
 bind -n C-right next-window
 bind < swap-window -t -1
@@ -58,7 +59,9 @@ set -g status-left ' #[fg=colour71]#(whoami)@#H:#[fg=colour99][#S]    '
 set -g status-left-length 70
 set -g status-right '  #[fg=colour71] #(date +"%b %_d \(%a\) %H:%M") '
 set -g status-right-length 50
-setw -g automatic-rename on
+
+setw -g automatic-rename off  # avoid window name rewrite by tmux
+set -g allow-rename on  # let oh-my-zsh update window name
 set -g window-status-current-style fg=colour190
 setw -g window-status-current-format '#I:[#W]#F'
 setw -g window-status-format '#I:[#W]#F'
